Fixing icons hover too large in navbar.

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ main {
 .nav-link svg {
     min-width: 2rem;
     margin: 0 1.5rem;
+    height: 75%;
 }
 
 .fa-primary {
